tests/ui/enum/enum-discrim-too-small2.stderr
error: literal out of range for `i8`
  --> $DIR/enum-discrim-too-small2.rs:8:11
   |
LL |     Ci8 = 223,
   |           ^^^
   |
   = note: the literal `223` does not fit into the type `i8` whose range is `-128..=127`
   = help: consider using the type `u8` instead
note: the lint level is defined here
  --> $DIR/enum-discrim-too-small2.rs:1:9
   |
LL | #![deny(overflowing_literals)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: literal out of range for `i16`
  --> $DIR/enum-discrim-too-small2.rs:15:12
   |
LL |     Ci16 = 55555,
   |            ^^^^^
   |
   = note: the literal `55555` does not fit into the type `i16` whose range is `-32768..=32767`
   = help: consider using the type `u16` instead

error: literal out of range for `i32`
  --> $DIR/enum-discrim-too-small2.rs:22:12
   |
LL |     Ci32 = 3_000_000_000,
   |            ^^^^^^^^^^^^^
   |
   = note: the literal `3_000_000_000` does not fit into the type `i32` whose range is `-2147483648..=2147483647`
   = help: consider using the type `u32` instead

error: literal out of range for `i64`
  --> $DIR/enum-discrim-too-small2.rs:29:12
   |
LL |     Ci64 = 9223372036854775809,
   |            ^^^^^^^^^^^^^^^^^^^
   |
   = note: the literal `9223372036854775809` does not fit into the type `i64` whose range is `-9223372036854775808..=9223372036854775807`
   = help: consider using the type `u64` instead

error: aborting due to 4 previous errors

